fix focus visible for select

--- a/src/common/style.css
+++ b/src/common/style.css
@@ -62,6 +62,7 @@ main > * {
 textarea:focus-visible,
 button:focus-visible,
 input:focus-visible,
+select:focus-visible,
 a:focus-visible {
 	outline: 0.15em solid rgb(255, 238, 0);
 }
